# Atelier_CMAKE

./: CMakeLists.txt
include/: calculator.h
src/: CMakeLists.txt  main.c
src/lib/: calculator.c
